<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ayarlarConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8FA"
    android:fitsSystemWindows="true"
    tools:context=".ayarlarActivity.AyarlarActivity">

    <LinearLayout
        android:id="@+id/ayarlarlinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ayarlartextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center|top"
            android:text="@string/settings_Settings"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="InefficientWeight" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ayarlarlinearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="200dp"
            app:cardElevation="3dp"
            app:cardMaxElevation="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/logo"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="96dp">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/setBackgroundColorCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginBottom="2dp"

                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:foregroundGravity="center"
                android:minWidth="60dp"
                app:cardBackgroundColor="#F6F6F6"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="18dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingBottom="14dp"
                        android:text="@string/choose_background_Settings"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_weight="1"
                        android:foregroundGravity="right"
                        android:rotation="180"
                        app:srcCompat="@drawable/baseline_arrow_back_ios_24"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/setBackColorCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:visibility="gone"
                app:cardBackgroundColor="#EDEDED"
                app:cardCornerRadius="25dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp"
                tools:ignore="InefficientWeight">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/whiteColorLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/whiteColorCardView"
                            android:layout_width="35dp"
                            android:layout_height="35dp"

                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:foregroundGravity="center"
                            android:minWidth="60dp"
                            app:cardBackgroundColor="#FFFFFF"
                            app:cardCornerRadius="50dp"
                            app:cardElevation="0dp"
                            app:strokeWidth="1dp">

                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/white_Settings"
                            android:textColor="#616161" />
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/redColorLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/redColorCardView"
                            android:layout_width="35dp"
                            android:layout_height="35dp"

                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:foregroundGravity="center"
                            android:minWidth="60dp"
                            app:cardBackgroundColor="#FF0000"
                            app:cardCornerRadius="50dp"
                            app:cardElevation="0dp"
                            app:strokeWidth="1dp">

                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/redtextView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/red_Settings"
                            android:textColor="#616161" />
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/blueColorLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/blueColorCardView"
                            android:layout_width="35dp"
                            android:layout_height="35dp"

                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:foregroundGravity="center"
                            android:minWidth="60dp"
                            app:cardBackgroundColor="#0095FF"
                            app:cardCornerRadius="50dp"
                            app:cardElevation="0dp"
                            app:strokeWidth="1dp">

                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/bluetextView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/blue_Settings"
                            android:textColor="#616161" />
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/greenColorLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/greenColorCardView"
                            android:layout_width="35dp"
                            android:layout_height="35dp"

                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:foregroundGravity="center"
                            android:minWidth="60dp"
                            app:cardBackgroundColor="#4CAF50"
                            app:cardCornerRadius="50dp"
                            app:cardElevation="0dp"
                            app:strokeWidth="1dp">

                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/greentextView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/green_Settings"
                            android:textColor="#616161" />
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/CyanwhiteColorLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/morColorCardView"
                            android:layout_width="35dp"
                            android:layout_height="35dp"

                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:foregroundGravity="center"
                            android:minWidth="60dp"
                            app:cardBackgroundColor="#9C27B0"
                            app:cardCornerRadius="50dp"
                            app:cardElevation="0dp"
                            app:strokeWidth="1dp">

                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/mortextView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/purple_Settings"
                            android:textColor="#616161" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/gecemoduCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"

                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:foregroundGravity="center"
                android:minWidth="60dp"
                app:cardBackgroundColor="#F6F6F6"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:strokeWidth="1dp"
                tools:ignore="DuplicateClickableBoundsCheck">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/gecemoduswitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingBottom="14dp"
                        android:text="@string/night_mode_Settings"
                        android:textColor="#616161"
                        android:textSize="14sp"
                        tools:ignore="InefficientWeight,RtlSymmetry,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/versiontextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/version_Settings"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>